--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra_template",
-  "homepage": "https://dveytsman.github.io/cra_template",
+  "homepage": "https://dveytsman/github.io/cra_template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
